--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./vue.min.js"></script>
     <link rel="stylesheet" href="./style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
     <title>Techno</title>
   </head>
   <body>
@@ -14,7 +17,7 @@
         <div v-for="produto in produtos" :key="produto.id" class="produto">
           <img :src="produto.img" :alt="produto" class="produto_img" />
           <div class="produto_info">
-            <span class="produto_preco">{{produto.preco}}</span>
+            <span class="produto_preco">{{produto.preco | numeroPreco}}</span>
             <h2 class="produto_titulo">{{produto.nome}}</h2>
           </div>
         </div>
