--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <h2 class="avaliacoes_subtitulo">Avaliações</h2>
             <ul>
               <li v-for="avaliacao in produto.reviews" class="avaliacao">
-                <p lass="avaliacao_descricao">
+                <p class="avaliacao_descricao">
                   {{ avaliacao.descricao }}
                 </p>
-                <p lass="avaliacao_usuario">
+                <p class="avaliacao_usuario">
                   {{avaliacao.nome}} | {{ avaliacao.estrelas }} estrelas
                 </p>
               </li>
