--- a/index.html
+++ b/index.html
@@ -18,6 +18,21 @@
         <div class="carrinho_menu">{{carrinhoTotal}} | </div>
       </header>
 
+      <section class="produtos">
+        <div
+          v-for="produto in produtos"
+          @click="abrirModal(produto.id)"
+          :key="produto.id"
+          class="produto"
+        >
+          <img :src="produto.img" :alt="produto" class="produto_img" />
+          <div class="produto_info">
+            <span class="produto_preco">{{produto.preco | numeroPreco}}</span>
+            <h2 class="produto_titulo">{{produto.nome}}</h2>
+          </div>
+        </div>
+      </section>
+
       <section class="modal" v-if="produto" @click="fecharModal">
         <div class="modal_container">
           <div class="modal_img">
@@ -28,30 +43,19 @@
             <span class="modal_preco">{{produto.preco | numeroPreco}}</span>
             <h2 class="modal_titulo">{{produto.nome}}</h2>
             <p>{{produto.descricao}}</p>
-            <button class="modal_btn">Adicionar Item</button>
+            <button v-if="produto.estoque > 0" class="modal_btn" @click="adicionarItem">Adicionar Item</button>
+            <button v-else class="modal_btn esgotado" disabled>Produto Esgotado</button>
           </div>
           <div class="avaliacoes">
             <h2 class="avaliacoes_subtitulo">Avaliações</h2>
             <ul>
               <li v-for="avaliacao in produto.reviews" class="avaliacao">
-                <p class="avaliacao_descricao">
-                  {{ avaliacao.descricao }}
-                </p>
+                <p class="avaliacao_descricao">{{ avaliacao.descricao }}</p>
                 <p class="avaliacao_usuario">
                   {{avaliacao.nome}} | {{ avaliacao.estrelas }} estrelas
                 </p>
               </li>
             </ul>
-          </div>
-        </div>
-      </section>
-
-      <section class="produtos">
-        <div v-for="produto in produtos" @click="abrirModal(produto.id)" :key="produto.id" class="produto">
-          <img :src="produto.img" :alt="produto" class="produto_img" />
-          <div class="produto_info">
-            <span class="produto_preco">{{produto.preco | numeroPreco}}</span>
-            <h2 class="produto_titulo">{{produto.nome}}</h2>
           </div>
         </div>
       </section>
