--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
     <div id="app">
       <header class="header">
         <img src="./assets/techno.svg" alt="Techno" class="logo">
-        <div class="carrinho_menu">{{carrinhoTotal}} | </div>
+        <div class="carrinho_menu">{{carrinhoTotal | numeroPreco }} | {{ carrinho.length }}
+        <ul>
+          <li v-for="(item, index) in carrinho">
+            <p>{{item.nome}}</p>
+            <button @click="removerItem(index)">X</button>
+          </li>
+        </ul>  
+        </div>
       </header>
 
       <section class="produtos">
