--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
   <body>
     <div id="app">
       <header class="header">
-        <img src="./assets/techno.svg" alt="Techno" class="logo">
-        <div class="carrinho_menu">{{carrinhoTotal | numeroPreco }} | {{ carrinho.length }}
-        <ul>
-          <li v-for="(item, index) in carrinho">
-            <p>{{item.nome}}</p>
-            <button @click="removerItem(index)">X</button>
-          </li>
-        </ul>  
+        <img src="./assets/techno.svg" alt="Techno" class="logo" />
+        <div class="carrinho_menu">
+          {{carrinhoTotal | numeroPreco }} | {{ carrinho.length }}
+          <ul>
+            <li v-for="(item, index) in carrinho">
+              <p>{{item.nome}}</p>
+              <button @click="removerItem(index)">X</button>
+            </li>
+          </ul>
         </div>
       </header>
 
@@ -50,8 +51,16 @@
             <span class="modal_preco">{{produto.preco | numeroPreco}}</span>
             <h2 class="modal_titulo">{{produto.nome}}</h2>
             <p>{{produto.descricao}}</p>
-            <button v-if="produto.estoque > 0" class="modal_btn" @click="adicionarItem">Adicionar Item</button>
-            <button v-else class="modal_btn esgotado" disabled>Produto Esgotado</button>
+            <button
+              v-if="produto.estoque > 0"
+              class="modal_btn"
+              @click="adicionarItem"
+            >
+              Adicionar Item
+            </button>
+            <button v-else class="modal_btn esgotado" disabled>
+              Produto Esgotado
+            </button>
           </div>
           <div class="avaliacoes">
             <h2 class="avaliacoes_subtitulo">Avaliações</h2>
@@ -66,6 +75,10 @@
           </div>
         </div>
       </section>
+
+      <div class="alerta" :class="{'ativo' : alertaAtivo}">
+        <p class="alerta_mensagem">{{mensagemAlerta}}</p>
+      </div>
     </div>
 
     <script src="./app.js"></script>
