--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="app">
       <header class="header">
         <img src="./assets/techno.svg" alt="Techno" class="logo" />
-        <div class="carrinho_menu">
+        <div class="carrinho_menu" @click="carrinhoAtivo = true">
           {{carrinhoTotal | numeroPreco }} | {{ carrinho.length }}
         </div>
       </header>
@@ -75,21 +75,21 @@
         :class="{ativo: carrinhoAtivo}"
         @click="clickForaCarrinho"
       >
-        <div class="carinho_container">
+        <div class="carrinho_container">
           <button class="carrinho_fechar" @click="carrinhoAtivo = false">
             X
           </button>
-          <h2 class="carrinho_titulo"></h2>
+          <h2 class="carrinho_titulo"> Carrinho </h2>
           <div v-if="carrinho.length > 0">
             <ul class="carrinho_lista">
               <li v-for="(item, index) in carrinho" class="carrinho_item">
                 <p>{{item.nome}}</p>
                 <p class="carrinho_preco">{{item.preco | numeroPreco}}</p>
-                <button class="carrinhoRemover" @click="removerItem(index)">X</button>
+                <button class="carrinho_remover" @click="removerItem(index)">X</button>
               </li>
             </ul>
             <p class="carrinho_total">{{ carrinhoTotal | numeroPreco}}</p>
-            <button class="carrinho_finalizar">Finalizar</button>
+            <button class="carrinho_finalizar">Finalizar Compra</button>
           </div>
           <p v-else>O carrinho está vazio.</p>
         </div>
